[tool.poetry]
name = "interpolation_for_deep_survival_analysis"
version = "0.1.0"
description = ""
authors = ["archettialberto <alberto1.archetti@mail.polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pycox = "^0.2.3"
survset = "^0.2.6"
scikit-survival = "^0.21.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
sklearndf = "^2.2.1"
torch = "^2.0.1"
black = "^23.7.0"
ray = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

